# supplies

./: .gitignore  pyproject.toml
documents/: acton_coffee.tex  amazon.tex  butcher_box.tex  colonial_spirits.tex  cvs.tex  h-mart.tex  idylwilde.tex  market_basket.tex  roche_brothers.tex  supplies.tex  target.tex  trader_joes.tex  upton_teas.tex  whole_foods.tex  yunnan_sourcing.tex
resources/: inventory-2024-08-09a.csv  inventory-2024-08-09b.csv  inventory-2024-08-12.csv  inventory-2024-08-16.csv  inventory-2024-08-31.csv  inventory-2024-09-24.csv  inventory-2024-10-01.csv  inventory-2024-10-15.csv  inventory-2024-10-21.csv  inventory-2024-10-29.csv  inventory-2024-10.csv  inventory-2024-11-07.csv  inventory-2024-11-11.csv  inventory-2024-11-27.csv  inventory-2024-12-12.csv  inventory-2025-11-24.csv  inventory-2025-12-01.csv  inventory-2026-01-02.csv  inventory-2026-01-09.csv  inventory-2026-06-06.csv
supplies/: market_basket.tex  supplies.py  supplies.tex  trader_joes.tex
