[tool.poetry]
name = "supplies"
version = "0.1.0"
description = "Automate creation of our home supplies inventory and shopping list"
authors = ["Raymond LeClair <raymond.leclair@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
ipython = "^8.25.0"
jupyterlab = "^4.2.1"
mypy = "^1.10.0"
notebook = "^7.2.1"
pylint = "^3.2.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
